# rigz

./: .cursorrules  .env  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OPTIMIZATION_OPPORTUNITIES.md  README.md  SECURITY.md  analyze_performance.py  analyze_performance_simple.py  bench-decompress.sh  benchmark-results.json  benchmark_results.txt  build.rs  hello.txt  run-bench-on-linux.sh  run-on-x86_64-linux.sh  test_single.txt  test_text.txt
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  ci.yml  compression.yml  debian.yml  decompression.yml  performance-regression.yml  performance.yml  pr-summary.yml
bench_bin/: gzippy  igzip  libdeflate-gzip  pigz  rapidgzip  zopfli
benchmark_results/: decompress-logs.json  decompress-silesia.json  decompress-software.json
debian/: changelog  control  copyright  rigz.1  rigz.install  rigz.manpages  rules
docs/: ASM_CODEGEN_FINAL_REPORT.md  ASM_IMPLEMENTATION_PLAN.md  ASM_LLVM_PARITY_PLAN.md  ASM_TUNING_RESULTS.md  ASM_VALIDATION_PLAN.md  AUDIT_SUMMARY.md  BEAT_EVERYTHING.md  EXCEED_ALL_PLAN.md  EXHAUSTIVE_OPTIMIZATION_PLAN.md  GAP_ANALYSIS.md  HYBRID_CHAIN_COMPRESSION.md  HYPERION_IMPLEMENTATION_PLAN.md  HYPEROPT_IMPLEMENTATION_SUMMARY.md  HYPEROPT_MULTIPATH.md  JIT_AND_STATISTICAL_ANALYSIS.md  L9_OPTIMIZATION_ANALYSIS.md  L9_OPTIMIZATION_PLAN.md  LIBDEFLATE_GAP_ANALYSIS.md  MULTI_SYMBOL_INTEGRATION_REPORT.md  MULTI_SYMBOL_NOVEL_APPROACHES.md  OPTIMIZATION_APPLICABILITY.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_STATUS.md  OVERLAPPING_BLOCKS.md  REMAINING_GAPS.md  SIMD_PROFILING_INVESTIGATION.md  SURPASS_PLAN.md  THREADING_DISPATCHER.md  THREADING_IMPLEMENTATION_SUMMARY.md  WHY_INLINE_ASM_DIFFERS_FROM_LLVM.md
examples/: bench_compression.rs  test_hash_priming.rs  verify_forward_refs.rs
performance_analysis/: underperformance_analysis.txt  underperformance_data.csv  underperformance_data.json
scripts/: README.md  aggregate_benchmark_results.py  analyze_gap.py  analyze_llvm_asm.py  apply_asm_patches.py  asm_codegen.py  asm_hyperoptimizer.py  asm_tuner.py  auto_tune.py  benchmark_ci.py  benchmark_decompression.py  benchmark_guard.py  benchmark_single_member.py  build-deb.sh  build-tools.sh  check_guards.py  collect_system_info.py  compare_asm.py  ec2_rapidgzip_benchmark.sh  generate_asm_patches.py  generate_explicit_regs.py  generate_optimized_asm.py  generate_summary.py  generate_test_data.py  libdeflate_asm_extract.py  libdeflate_to_rust_asm.py  llvm_pattern_guide.py  llvm_to_inline_asm.py  perf.py  perf_full.sh  pgo-build.sh  pre-commit  profile_hotpath.py  quick_bench.sh  rapidgzip_benchmark.py  remote_bench.sh  run_benchmarks.py  validate.py  validate_ci.py  validation_chart.py  (+1 more)
src/: adaptive_compression.rs  advanced_algorithms.rs  advanced_compression.rs  asm_decode.rs  asm_decode_v7.rs  bgzf.rs  block_finder.rs  cli.rs  compression.rs  consume_first_decode.rs  consume_first_table.rs  core_optimizations.rs  decompression.rs  deflate_decoder.rs  deflate_fix.rs  double_literal.rs  error.rs  explicit_regs_decode.rs  fast_decode.rs  fastloop_decode.rs  fixed_turbo.rs  format.rs  golden_tests.rs  hardware_analysis.rs  hyper_parallel.rs  hyperion.rs  hyperopt_benchmarks.rs  hyperopt_dispatcher.rs  isal.rs  isal_decode.rs  jit_decode.rs  libdeflate_decode.rs  libdeflate_entry.rs  libdeflate_exact.rs  libdeflate_exact_regs.rs  libdeflate_ext.rs  llvm_analyzer.rs  lockfree_threading.rs  main.rs  marker_decode.rs  (+45 more)
test_data/: text-1MB.txt
test_results/: validation.html
