[package]
name = "rigz"
version = "0.1.0"
edition = "2021"
description = "A fast, parallel gzip replacement written in Rust"
license = "Zlib"
repository = "https://github.com/jackdanger/rigz"
homepage = "https://github.com/jackdanger/rigz"
documentation = "https://github.com/jackdanger/rigz#readme"
readme = "README.md"
keywords = ["gzip", "compression", "parallel", "pigz"]
categories = ["compression", "command-line-utilities"]
authors = ["Jack Danger Canty"]

[dependencies]
# Compression: flate2 with system zlib for gzip-identical output at all levels
# IMPORTANT: Do NOT use libz-ng - it produces different compression ratios at L1-L8
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }

# Parallel processing
rayon = "1.8"

# CLI and utilities  
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
filetime = "0.2"
num_cpus = "1.16"

# Memory-mapped I/O for zero-copy file access
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallelization utilities (used by rayon)
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"

# CRC32 (hardware-accelerated on ARM/x86)
crc32fast = "1.4"

# System utilities
core_affinity = "0.8"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
