[package]
name = "gzippy"
version = "0.1.0"
edition = "2021"
description = "The fastest parallel gzip. Drop-in replacement for gzip and pigz."
license = "Zlib"
repository = "https://github.com/jackdanger/gzippy"
homepage = "https://github.com/jackdanger/gzippy"
documentation = "https://github.com/jackdanger/gzippy#readme"
readme = "README.md"
keywords = ["gzip", "compression", "parallel", "pigz", "zlib"]
categories = ["compression", "command-line-utilities"]
authors = ["Jack Danger Canty"]
build = "build.rs"

[features]
default = []
isal = []  # ISA-L high-performance decompression (enabled by build.rs when available)

[dependencies]
# Compression: flate2 with zlib-ng for maximum performance
# zlib-ng is a modernized fork with SIMD optimizations (2-3x faster)
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng"] }

# Decompression: libdeflater provides Rust bindings to libdeflate 
# (30-50% faster than zlib for in-memory operations)
libdeflater = "1.0"
# Low-level bindings for _ex functions (returns consumed bytes)
libdeflate-sys = "1.0"

# CLI and utilities  
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
filetime = "0.2"
num_cpus = "1.16"

# Memory-mapped I/O for zero-copy file access
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CRC32 (hardware-accelerated on ARM/x86)
crc32fast = "1.4"

# SIMD-accelerated byte searching (for fast gzip header detection)
memchr = "2.7"

# System utilities
core_affinity = "0.8"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = "fat"           # Full cross-crate LTO (slower build, faster binary)
codegen-units = 1     # Single codegen unit for maximum optimization
panic = "abort"       # Smaller binary, no unwinding overhead
opt-level = 3         # Maximum optimization
strip = true          # Remove symbols for smaller binary

# Enable native CPU optimizations when building locally
# (commented out for portable binaries - uncomment for max local perf)
# [build]
# rustflags = ["-C", "target-cpu=native"]